# mate-color-manager

./: COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  commit-303f039  configure.ac
data/: Makefile.am  mate-color-manager.schemas.in  mcm-apply.desktop.in  mcm-calibrate.ui  mcm-import.desktop.in  mcm-picker.desktop.in  mcm-picker.ui  mcm-prefs.desktop.in  mcm-prefs.ui  org.mate.ColorManager.service.in  org.mate.color-manager.gschema.migrate  org.mate.color-manager.gschema.xml
data/figures/: Makefile.am
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/256x256/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/64x64/: Makefile.am
data/icons/scalable/: Makefile.am
data/targets/: Makefile.am
data/tests/: Makefile.am
help/: Makefile.am  mate-color-manager.omf.in
help/C/: mate-color-manager.xml
help/cs/: cs.po  mate-color-manager.xml
help/de/: de.po  mate-color-manager.xml
help/el/: el.po  mate-color-manager.xml
help/es/: es.po  mate-color-manager.xml
help/id/: id.po  mate-color-manager.xml
help/ru/: mate-color-manager.xml  ru.po
man/: Makefile.am  mcm-apply.sgml  mcm-import.sgml  mcm-prefs.sgml
po/: LINGUAS  POTFILES.in  ar.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  fr.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  nb.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  ta.po  th.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
policy/: Makefile.am  org.mate.color.policy  org.mate.color.policy.in
rules/: 95-mcm-colorimeters.rules  95-mcm-devices.rules  Makefile.am
src/: Makefile.am  mcm-apply.c  mcm-brightness.c  mcm-brightness.h  mcm-calibrate-argyll.c  mcm-calibrate-argyll.h  mcm-calibrate-dialog.c  mcm-calibrate-dialog.h  mcm-calibrate-manual.c  mcm-calibrate-manual.h  mcm-calibrate.c  mcm-calibrate.h  mcm-cell-renderer-profile.c  mcm-cell-renderer-profile.h  mcm-cie-widget.c  mcm-cie-widget.h  mcm-client.c  mcm-client.h  mcm-clut.c  mcm-clut.h  mcm-colorimeter.c  mcm-colorimeter.h  mcm-dbus.c  mcm-dbus.h  mcm-device-cups.c  mcm-device-cups.h  mcm-device-sane.c  mcm-device-sane.h  mcm-device-udev.c  mcm-device-udev.h  mcm-device-virtual.c  mcm-device-virtual.h  mcm-device-xrandr.c  mcm-device-xrandr.h  mcm-device.c  mcm-device.h  mcm-dmi.c  mcm-dmi.h  mcm-dump-edid.c  mcm-dump-profile.c  (+39 more)
