include $(top_srcdir)/mate-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = mate-color-manager
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES =					\
	figures/mcm-adjust.png			\
	figures/mcm-basic.png			\
	figures/mcm-scanner.png			\
	figures/mcm-calibrate-default.png	\
	figures/mcm-calibrate-drawing.png	\
	figures/mcm-print-mode.png		\
	figures/mcm-screen-type.png		\
	figures/mcm-device-configure.png	\
	figures/mcm-import.png

DOC_LINGUAS = cs de el es id ru

